design fix: fixed 'general settings'-> 'Disable Auto-link keywords for Post types' select/options 'tooltip info icon' not aligned properly with the select element

--- a/assets/scss/betterlinks.scss
+++ b/assets/scss/betterlinks.scss
@@ -227,8 +227,14 @@ label.extra_info_keywords > input#keywords {
 
 //
 // react select design break fix: Disable Auto-link keywords for Post Types start
-.betterlinks-body .btl-form-group.btl-general-tab-settings-react-select .btl-modal-select--full .btl-react-select__control {
-	height: auto;
+.betterlinks-body .btl-form-group.btl-general-tab-settings-react-select {
+	.btl-modal-select--full .btl-react-select__control {
+		height: auto;
+	}
+	.btl-form-field label.btl-checkbox-field {
+		display: flex;
+	}
 }
+
 // react select design break fix: Disable Auto-link keywords for Post Types end
 //
